Creating stateless compnts for SubmitATip

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -78,3 +78,12 @@ textarea {
 #mailbox-controls {
   background-color: white;
 }
+
+.btn-next {
+  margin-left: 10px;
+}
+
+.btn-prev {
+  background: #eee;
+  color: #aaa;
+}
